# klippo

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.yml  master-prompt.md  pseudonymization_workbench_mock.html  technical-plan.md
.github/workflows/: deploy.yml  docker.yml  dotnet.yml  frontend.yml  python.yml
deploy/: deploy.sh  setup-server.sh
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.frontend.prod  Dockerfile.pii-service  certbot-init.sh  docker-compose.prod.yml
docs/: complete-codebase-documentation.md  deployment-guide.md  frontend-component-map.md  security-checklist.md
scripts/: create-user.sh
src/: PiiGateway.sln
src/pii-detection-service/: pyproject.toml  requirements-dev.txt  requirements.txt
src/pii-detection-service/app/: config.py  health.py  main.py  models.py
src/pii-detection-service/app/detection/: merger.py  pipeline.py  router.py
src/pii-detection-service/app/detection/layer1_regex/: checksums.py  engine.py  recognizers.py
src/pii-detection-service/app/detection/layer2_ner/: engine.py  language_detect.py
src/pii-detection-service/app/detection/layer3_llm/: llm_client.py  parser.py  prompts.py
src/pii-detection-service/evaluation/: __init__.py  evaluate.py  generate_dataset.py  metrics.py
src/pii-detection-service/evaluation/data/: test_set.jsonl
src/pii-detection-service/tests/: conftest.py  test_checksums.py  test_contract.py  test_health.py  test_layer1.py  test_layer2.py  test_layer3.py  test_merger.py  test_pipeline.py  test_recognizers.py  test_red_team.py
(+244 files in other folders)
